@@ -1,3 +1,8 @@
+Tue May 15 22:03:33 MSD 2007
+        * Port code to sun sparc/solaris
+        * Fix startup script for suse compatibility
+        * Fix typos
+
 ------------------- pcapsipdump 0.1.4 ------------------------------------------
 Fri May 11 22:31:49 MSD 2007
         * Avoid file trimming - add 'packet-buffered' (-U) option,
